# roman-shear-sims

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: smoke-test.yml  testing-and-coverage.yml
docs/: conf.py  index.rst
notebooks/: achromatic_IMCOM_galaxy_catalog.ipynb  achromatic_galaxy_catalog.ipynb  achromatic_simple_catalog.ipynb  test_SkyCatalog_parser.ipynb  test_sims.ipynb
roman_shear_sims/: __init__.py  catalog.py  constant.py  executor_utils.py  noise.py  psf_makers.py  sim.py  skycatlog_parser.py  utils.py  wcs.py
scripts/: make_psfs.py
src/roman_shear_sims/: catalog.py  constant.py  noise.py  psf_makers.py  sim.py  skycatlog_parser.py  utils.py  wcs.py
